# objlab

./: .gitmodules  CMakeLists.txt  README.md  vcsetup.bat
scripts/: bootstrap-linux.sh  konmari.sh
src/: app.cc  app.hh  draw-context.hh  face-sorter.hh  gui-params.hh  gui-window.cc  gui-window.hh  main.cc  mesh.hh  obj-writer.cc  obj-writer.hh  params.hh  texture.hh
